--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,5 @@
 <h1><%= @post.title %></h1>
 <p><%= @post.body %></p>
 <%= link_to "<< Back to Posts List", posts_path %>
+<%= link_to "edit", edit_post_path(@post) %>
+<%= link_to "delete", post_path(@post), method: :delete, data: {confirm: "Really delete the article?"} %>
