Tagging feature completed

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,4 +9,5 @@
   <% end %>
 </ul>
 
-<%= link_to "Create a New Post", new_post_path, class: "new_post" %>
+<%= link_to "Create a New Post", new_post_path, class: "new_article" %>
+<%= link_to "View all tags", tags_path %> 
