--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@post) do |f| %>
+<%= form_for(@post, html: {multipart: true}) do |f| %>
   <ul>
   <% @post.errors.full_messages.each do |error| %>
     <li><%= error %></li>
@@ -12,11 +12,20 @@
     <%= f.label :body %><br />
     <%= f.text_area :body %>
   </p>
+
   <p>
     <%= f.label :tag_list %><br />
     <%= f.text_field :tag_list %>
   </p>
+
   <p>
+  <% if @post.image.exists? %>
+      <%= image_tag @post.image.url %><br/>
+  <% end %>
+  <%= f.label :image, "Attach a New Image" %><br />
+  <%= f.file_field :image %>
+  </p>
+
   <%= f.submit %>
-</p>
+  </p>
 <% end %>
