--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,4 +1,4 @@
 <% @tag.each do |tag| %>
     <%= tag.name %>
-    <%= link_to "delete", tag_path(@tag), method: :delete, data: {confirm: "Really delete the tag?"} %>
+    <%= link_to 'delete', tag_path(@tag), method: :delete, data: {confirm: 'Really delete the tag?'} %>
 <%end%>
