--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -22,7 +22,7 @@
   <% if @post.image.exists? %>
       <%= image_tag @post.image.url %><br/>
   <% end %>
-  <%= f.label :image, "Attach a New Image" %><br />
+  <%= f.label :image, 'Attach a New Image' %><br />
   <%= f.file_field :image %>
   </p>
 
